--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "sass": "^1.77.6",
-    "sass-loader": "^14.2.1"
+    "sass-loader": "^14.2.1",
+    "typescript": "^5.5.3"
   }
 }
